tests/samples/ask-bad-syntax.err
ask-bad-syntax.flow:2:Syntax error. "question" *response\nd".
