tests/samples/ask-bad-syntax.flow
dialog onboarding do
  ask "Some question" response
done
